web_static/styles/8-places.css
.places {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.places article {
    width: 390px;
    padding: 20px;
    margin: 20px;
    border: 1px solid #ff5a5f;
    border-radius: 4px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
    flex: 0 1 25%;
}

.places h1 {
    font-size: 30px;
    font-weight: bold;
    width: 100%;
    margin: 24.9px 0 0 0;
}

.place h2 {
    font-size: 30px;
    font-weight: bold;
    position: absolute;
}

.listing-header {
    display: inline-block;
    width: 100%;
}

.places .information {
    display: flex;
    justify-content: center;
    margin-top: 20px;
    height: 80px;
    border-top: 1px solid #DDDDDD; 
    border-bottom: 1px solid #DDDDDD;
}

.price_by_night {
    color: #ff5a5f;
    border: 4px solid #FF5A5F;
    border-radius: 50px;
    min-width: 60px;
    height: 60px;
    font-size: 30px;
    line-height: 60px;
    float: right;
    margin-left: auto;
    margin-top: -50px;
    position: relative;
    margin-right: -5px;
}

.max_guest {
    background: url('../images/icon_group.png') no-repeat;
    background-position: center;
    width: 100px;
    margin-bottom: 15px;
}

.max_guest p {
    margin-top: 55px;
    margin-bottom: auto;
    margin-left: auto;
}

.number_rooms {
    background: url('../images/icon_bed.png') no-repeat;
    background-position: center;
    width: 100px;
    margin-bottom: 15px;
}

.number_rooms p {
    margin-top: 55px;
    margin-bottom: auto;
    margin-left: auto;
}

.number_bathrooms {
    background: url('../images/icon_bath.png') no-repeat;
    background-position: center;
    width: 100px;
    margin-bottom: 15px;
}

.number_bathrooms p {
    margin-top: 55px;
    margin-bottom: auto;
    margin-left: auto;
}

.user {

}

